[package]
name = "strnum"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "Store common string values in enum variants"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/strnum"

[lib]
name = "strnum"
proc-macro = true

[dependencies]
syn = { version  = "0.15" }
quote = "0.6"
proc-macro2 = "0.4"
syn_util = {version = "0.2", git = "https://github.com/icewind1991/syn_util", branch = "lit-cast"}
